
	- Added an option under Setup -> Money -> Entry Fees to show waitlisted
	  entries on an invoice for tournaments that require pre-payment before
	  waitlist admission.

	- Allowed the user to designate their own words for sides in debate,
	  instead of hard coding "aff" "pro" "con" to different types of debate.
	  This will help accomodate other forms of debate.  Set it on the Ballot &
	  Rules tab on event settings.

	- Added a feature with the point scales and speech times on debate ballots
	  where you can use ellipses now to right justify any text after the
	  ellipses.

	  So putting:
	  
		  NC...7min
		  1AR...4min
	  
	  in the box will yield:

		  NC...........8 min
		  1AR..........4 min
	
	  in the Speech Times guide on the printed ballot.


==CHANGES RELEASED 7.1.2014==

	(this is a long status update; if you don't care, there are indeed also
	new features and fixes on the bottom of this).

	So the bad news is I haven't done one of these in a while largely because
	with the OSF grant and therefore our connection with IDEA  ending, I had to
	go back to a day job and therefore haven't had much time to change things
	with Tabroom lately.

	The further bad news is that the continued explosive growth of Tabroom was
	rapidly becoming something I feared I could no longer keep up with.  The
	hosting for Tabroom is largely free through a cobbled together arrangement
	of favors and trades in kind, but would not permit me to grow capacity any
	further without expanding expenses considerably.  Support is also done by a
	small band of volunteers, but we don't always have time for it.  I faced
	the choice of charging directly (which would be a huge pain, and difficult
	to do with open source software), or not allowing some people who want to
	use Tabroom to do so, or paying a considerable amount of money out of
	pocket to keep it going heathily.

	Not good.  Is Tabroom doomed?  Are we going to have to go back to tabbing
	on cards!
	