@@ -80,8 +80,6 @@
 
 	<div class="huge left">
 
-		<span class="bigspan padno">
-
 		<h2> 
 
 %		if ($year) { 
@@ -96,15 +94,13 @@
 
 		</h2>
 
-		</span>
-
 		<& /funclib/tablesorter.mas, table => "tournlist" &> 
 
 		<table cellpadding="3" width="100%" id="tournlist" class="tablesorter">
 
 			<thead>
 
-			<tr class="dkgreen">
+			<tr class="yellow">
 			
 				<th class="smaller">
 					Dates
@@ -170,7 +166,7 @@
 					</td>
 
 					<td>
-						<a class="nextbigspan nowrap white" href="tourn/index.mhtml?tourn_id=<% $tourn->id %>">
+						<a class="white limit2 smallish" href="tourn/index.mhtml?tourn_id=<% $tourn->id %>">
 							<% $tourn->name %>
 						</a>
 					</td>
@@ -179,15 +175,15 @@
 						<% $tourn->location %> 
 					</td>
 
-					<td class="centeralign smallish nowrap">
+					<td class="centeralign smaller nowrap">
 						<span class="hidden">
 							<% ($open && $reg_end) ? $reg_end->epoch : "" %>
 							<% $reg_start && $reg_start > $now ? $reg_start->epoch : ""%>
 							<% $reg_end && $reg_end < $now ? $reg_end->epoch : "" %>
 						</span>
 						<% ($open) ? "Due ".Tab::niceshortdate($reg_end)." <br />@".Tab::nicetime($reg_end)  : "" %>
-						<% $reg_start > $now ? "Open ".Tab::niceshortdate($reg_start) : ""%>
-						<% $reg_end < $now ? "Due ".Tab::niceshortdate($reg_end)." <br />@".Tab::nicetime($reg_end) : ""%>
+						<% $reg_start > $now ? "Opens ".Tab::niceshortdate($reg_start)." <br />@".Tab::nicetime($reg_start) : ""%>
+						<% $reg_end < $now ? "Closed ".Tab::niceshortdate($reg_end)." <br />@".Tab::nicetime($reg_end) : ""%>
 						<% Tab::tzname($tz) %>
 					</td>
 			
@@ -211,29 +207,45 @@
 			<input type="hidden" name="state" value="<% $state%>">
 			<input type="hidden" name="country" value="<% $country%>">
 
-			<span class="half">
-				M: <select name="month" onchange='this.form.submit()'>
-				<option value=""></option>
-%				foreach my $amonth (1 .. 12) { 
-					<option value="<%$amonth %>" <% $month == $amonth ? 'selected' : "" %>>
-						<% $amonth %>
-					</option>
-%				}
-				</select>
-			</span>
-			
-			<span class="half">
-				Y: <select name="year" onchange='this.form.submit()'>
-				<option value=""></option>
-%				my $ayear;
-%				for ($ayear = $now->year + 1, $ayear >= 1995, $ayear--) { 
-					<option value="<% $ayear %>" <% $month == $ayear ? 'selected' : "" %>>
-						<% $ayear %>
-					</option>
-%					$ayear--;
-%				}
-				</select>
-			</span>
+			<div class="even visible">
+
+				<span class="half nospace">
+					<span class="nospace quarter rightalign">
+						M: 
+					</span>
+					
+					<span class="threequarter nospace">
+					<select name="month" onchange='this.form.submit()' class="chosen">
+						<option value=""></option>
+%						foreach my $amonth (1 .. 12) { 
+							<option value="<%$amonth %>" <% $month == $amonth ? 'selected' : "" %>>
+								<% $amonth %>
+							</option>
+%						}
+					</select>
+					</span>
+				</span>
+				
+				<span class="half nospace">
+					<span class="quarter rightalign nospace">
+						Y: 
+					</span>
+					
+					<span class="threequarter nospace">
+						<select name="year" onchange='this.form.submit()'>
+						<option value=""></option>
+%						my $ayear;
+%						for ($ayear = $now->year + 1, $ayear >= 1995, $ayear--) { 
+							<option value="<% $ayear %>" <% $month == $ayear ? 'selected' : "" %>>
+								<% $ayear %>
+							</option>
+%							$ayear--;
+%						}
+						</select>
+					</span>
+				</span>
+
+			</div>
 
 <%perl>
 
