@@ -65,7 +65,12 @@
 					<td class="smaller">
 %						foreach my $director ($tourn->admins) { 
 							<div class="block padless">
-								<% $director->first." ".$director->last %> (<a href="mailto:<% $director->email %>" class="white padno inline"><% $director->email %></a>)
+								<span class="half nowrap" title="<% $director->first." ".$director->last %>">
+									<% $director->first." ".$director->last %> 
+								</span>
+								<span class="half nowrap">
+									(<a href="mailto:<% $director->email %>" class="white"><% $director->email %></a>)
+								</span>
 							</div>
 %						}
 					</td>
