@@ -125,7 +125,7 @@
 				</span>
 
 				<span class="third rightalign">
-					<a class="dkevenrow block centeralign" href="export_prefs.mhtml?entry_id=<% $entry_id %>&school_id=<% $school->id %>">
+					<a class="dkgreen centeralign" href="export_prefs.mhtml?entry_id=<% $entry_id %>&school_id=<% $school->id %>">
 						Export to Excel
 					</a>
 				</span>
